projects/k8s-ingress-letsencrypt/yamls/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx               # Name of Ingress Resource
  namespace: default        # Namespace of your application
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # For https containernonly
    # certmanager.k8s.io/cluster-issuer: "letsencrypt"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - my.domain.com
    secretName: my-domain-com
  rules:
  - host: my.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx    # Service Name of your Application
          servicePort: 80       # Service Port of your Application. If HTTPS uncomment line - 7
